--- a/calm/Sortmodule.html
+++ b/calm/Sortmodule.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    #myProgress {
+      width: 100%;
+      background-color: #ddd;
+    }
+    
+    #myBar {
+      width: 1%;
+      height: 20px;
+      background-color: #04AA6D;
+    }
+    </style>
 <title>Sort a HTML List Alphabetically</title>
 <body>
 
@@ -56,6 +68,36 @@ function sortList() {
   }
 }
 </script>
+<h1>JavaScript Progress Bar</h1>
+
+<div id="myProgress">
+  <div id="myBar"></div>
+</div>
+
+<br>
+<button onclick="move()">Click Me</button> 
+
+<script>
+var i = 0;
+function move() {
+  if (i == 0) {
+    i = 1;
+    var elem = document.getElementById("myBar");
+    var width = 1;
+    var id = setInterval(frame, 10);
+    function frame() {
+      if (width >= 100) {
+        clearInterval(id);
+        i = 0;
+      } else {
+        width++;
+        elem.style.width = width + "%";
+      }
+    }
+  }
+}
+</script>
+
 
 </body>
 </html>
